Lexer: Fixed type of grammar